# netbox-vc-builder

./: README.md  pyproject.toml
netbox_vc_builder/: __main__.py  build_vc.py  check_members.py  cli.py  config.py  constants.py  find_masters.py  find_members.py  interface_ops.py  models.py  netbox_client.py  reporter.py
plan/: 00-overview.md  01-project-setup.md  02-architecture.md  03-data-models.md  04-netbox-client.md  05-business-logic.md  06-cli.md  07-output.md  08-testing.md  09-packaging.md
tests/: conftest.py  test_build_vc.py  test_check_members.py  test_cli.py  test_config.py  test_find_masters.py  test_find_members.py  test_interface_ops.py  test_netbox_client.py
