[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netbox-vc-builder"
version = "0.1.0"
description = "Build and maintain Cisco switch stacks as clean Virtual Chassis in NetBox"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
  { name = "Christian Knoblauch", email = "christian.knoblauch@gmx.de" },
]
keywords = ["netbox", "cisco", "network-automation", "virtual-chassis", "stack"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Networking",
]
dependencies = [
  "typer>=0.12",
  "rich>=13",
  "pynetbox>=7",
  "pyyaml>=6",
]

[project.scripts]
netbox-vc-builder = "netbox_vc_builder.cli:app"

[project.urls]
Homepage = "https://github.com/kiksen1987/netbox-vc-builder"
Issues = "https://github.com/kiksen1987/netbox-vc-builder/issues"

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["netbox_vc_builder"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
